--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/main.css">
+    <title>Tailwind CSS</title>
+
 </head>
 <body>
     <nav class="relative container">Hello</nav>
