navbar  added in html page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Tailwind CSS</title>
-
 </head>
 <body>
-    <nav class="relative container">Hello</nav>
+    <!-- Navbar -->
+    <nav class="relative container bg-red-500 mx-auto p-6">
+        <!-- Flex container -->
+        <div class="flex items-center justify-between">
+            <!-- Logo -->
+            <div class="pt-2">
+                <img src="img/logo.png" alt="Logo"/>
+            </div>
+            
+        </div>
+    </nav>
 </body>
 </html>
